src/sap.m/src/sap/m/themes/base/UploadCollection.less
/* ... */
.sapMUCItemHL {
	height:				5rem;
	width:				100%;
	padding-left:		1rem;
	padding-right:		1rem;
	-moz-box-sizing:    border-box;
	box-sizing:			border-box;
	flex: 				auto;
}

/* Item Icon */
.sapMUCItemIcon {
	font-family:		SAP-icons;
	font-size:			2.5rem;
//	color: 				@sapUiElement;
}

.sapMImg.sapMUCItemImage{
	height:				3rem;
}

/* Text: Filename */
.sapMUC .sapMUCFileName.sapMLnk {
	margin-top:			0.125rem;

	font-family:		@sapUiFontFamily;
//	font-size:			@sapMFontLargeSize;
	font-weight:		normal;
	white-space:		nowrap;
	overflow:			hidden;
	text-overflow:		ellipsis;
	vertical-align:		top;
}

.sapMUC .sapMUCItem .sapMUCFileName.sapMLnk:focus {
	outline-offset:		0.0625rem;
}

/* Text: Description (/Progress) */
.sapMUCDescriptionHL .sapMLabel{
	height:				1rem;
	margin-top:			0.625rem;
	margin-bottom:		0.125rem;

	font-family: 		@sapUiFontFamily;
//	font-size:			@sapMFontMediumSize;
	font-weight:		normal;
//	color:				@sapUiLightText;
	white-space:		nowrap;
	overflow:			hidden;
	text-overflow:		ellipsis;
	vertical-align:		bottom;
}

.sapMUC .sapUiVlt {
	margin:				1rem 0rem 1rem 0rem;
	overflow:			visible;
}

/* Button Horizontal Layout  */
.sapMUCBtnHL {
	position:			absolute;
	right:				0rem;
	margin:				1rem 1rem 1rem 0rem;
	display:			flex;
}

/* Buttons */
.sapMBtn.sapMUCEditBtn,
.sapMBtn.sapMUCDeleteBtn,
.sapMBtn.sapMUCCancelBtn,
.sapMBtn.sapMUCOkBtn {
	margin-left:		0.125rem;
}

.sapMUCText {
	height:				3rem;
}

.sapMUCItemHL > .sapUiHLayoutChildWrapper {
	height:				3rem;
	vertical-align: 	middle;
}

.sapMUCItemHL > .sapUiHLayoutChildWrapper > .sapMUCItemIcon,
.sapMUCItemHL > .sapUiHLayoutChildWrapper > .sapMUCItemImage {
	height:				3rem;
	width:				3rem;
	padding-left:		0rem;
	margin-right:		0.75rem;
	margin-top:			1rem;
	margin-bottom:		1rem;
	vertical-align:		middle;
}

.sapMUCEditHL {
	position:			absolute;
	width:				50%;
}

/* Busy Indicator */
.sapMBusyIndicator.sapMUCloadingIcon {
	padding-top:		1.25rem;
	padding-bottom:		1.25rem;
	padding-right:		1rem;
	padding-left:		0rem;
}

.sapMBusyIndicator.sapMUCloadingIcon .sapMBusySvg {
	height:				2.5rem;
	width:				2.5rem;
}

/* In iOS/mac the line content is shown at the bottom of the line.
the following lines remove the responsible top margin/padding  */
html[data-sap-ui-os^="mac"][data-sap-ui-browser^="sf"],
html[data-sap-ui-os^="iOS"] {
	.sapMUCItemHL > .sapUiHLayoutChildWrapper > .sapMUCItemIcon,
	.sapMUCItemHL > .sapUiHLayoutChildWrapper > .sapMUCItemImage {
		margin-top:		0rem;
	}

	.sapMUCBtnHL {
		margin-top:		0rem;
	}

	.sapMBusyIndicator.sapMUCloadingIcon {
		padding-top:	0rem;
	}

	.sapMUC .sapUiVlt {
		margin-top:		0rem;
	}
}

/* ************************************************************************************* */
/* Borderless Design (Cozy Form Factor)                                                  */
/* ************************************************************************************* */
/* In iOS/mac the line content is shown at the bottom of the line.
the following lines remove the responsible top margin/padding  */
html[data-sap-ui-os^="mac"][data-sap-ui-browser^="sf"] .sapMUC .sapMListShowSeparatorsNone,
html[data-sap-ui-os^="iOS"] .sapMUC .sapMListShowSeparatorsNone {

	/* ---------------------------------------*/
	/* General List Item  (Cozy Form Factor)  */
	/* ---------------------------------------*/
	.sapMLIB.sapMUCListItem {
		>.sapMLIBContent.sapMLIBContentMargin {
			margin-top:			0rem;	//no idea why this is needed to align
		}

		.sapMUCItemHL > .sapUiHLayoutChildWrapper > .sapMUCItemIcon,
		.sapMUCItemHL > .sapUiHLayoutChildWrapper > .sapMUCItemImage {
			margin-top:			0rem;
		}

		.sapMUCText {
			margin-top: 		0rem;
		}

		.sapMUCBtnHL {
			margin-top:			0rem;
		}
	}

	/* --------------------------------------*/
	/* Single List Item  (Cozy Form Factor)  */
	/* --------------------------------------*/
	.sapMLIB.sapMUCListSingleItem {
		.sapMUCItemHL > .sapUiHLayoutChildWrapper > .sapMUCItemIcon,
		.sapMUCItemHL > .sapUiHLayoutChildWrapper > .sapMUCItemImage {
			margin-top:			0rem;
		}

		.sapMUCText {
			margin-top:			0rem;
		}

		.sapMUCBtnHL {
			margin-top:			0rem;
		}
	}

	/* -------------------------------------*/
	/* First List Item  (Cozy Form Factor)  */
	/* -------------------------------------*/
	.sapMLIB.sapMUCListFirstItem {
		.sapMUCItemHL > .sapUiHLayoutChildWrapper > .sapMUCItemIcon,
		.sapMUCItemHL > .sapUiHLayoutChildWrapper > .sapMUCItemImage {
			margin-top:			0.5rem;
		}

		.sapMUCText {
			margin-top:			0.5rem;
		}

		.sapMUCBtnHL {
			margin-top:			0.5rem;
		}
	}

	/* ------------------------------------*/
	/* Last List Item  (Cozy Form Factor)  */
	/* ------------------------------------*/
	.sapMLIB.sapMUCListLastItem {
		>.sapMLIBContent.sapMLIBContentMargin {
			margin-top:			0rem;	//no idea why this is needed to align
		}

		.sapMUCItemHL > .sapUiHLayoutChildWrapper > .sapMUCItemIcon,
		.sapMUCItemHL > .sapUiHLayoutChildWrapper > .sapMUCItemImage {
			margin-top:			0rem;
		}

		.sapMUCText {
			margin-top:			0rem;
		}

		.sapMUCBtnHL {
			margin-top:			0rem;
		}
	}
}
/* ... */

