[INTERNAL][FIX] sap.m.UploadCollection: Deletion of the default tooltip of the file Uploader and some adaptation of the testpage: maximumFilenameLength to 55 letters; Unique document ID for the testpage examples; a file with a long filename. In edit mode it's now possible to trigger the 'ok' when you click close behind the file name. Edit mode in SAP Fiori Client is now possible.
CR-Id: 012006153200001556282015

--- a/src/sap.m/src/sap/m/themes/base/UploadCollection.less
+++ b/src/sap.m/src/sap/m/themes/base/UploadCollection.less
@@ -145,7 +145,7 @@
 
 .sapMUCEditHL {
 	position:			absolute;
-	width:				50%;
+	width:				20%;
 }
 
 /* Busy Indicator */
